--- a/views/arqbackup_listing.yml
+++ b/views/arqbackup_listing.yml
@@ -14,6 +14,7 @@ table:
         i18n_header: arqbackup.column.destination
     -   column: arqbackup.completed
         i18n_header: arqbackup.column.completed
+        formatter: timestampToMoment
     -   column: arqbackup.amount
         i18n_header: arqbackup.column.amount
     -   column: arqbackup.error
