--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "munkireport/arqbackup",
+    "name": "precursorca/arqbackup",
     "description": "Module for munkireport.",
     "license": "MIT"
 }
